modify fields_for of view(#7769)

--- a/app/views/hrinfos/edit.html.erb
+++ b/app/views/hrinfos/edit.html.erb
@@ -49,7 +49,7 @@
 	</p>
 <% if @user.ingroup?("admin") %>
 	<p>
-		<% fields_for :attachment, @attachment do |attachform| -%>
+		<%= fields_for :attachment, @attachment do |attachform| -%>
 		<%= attachform.label t('hrinfos.edit.picture') %>
 			<% if !@attachments.blank? %>
 				<% 
