--- a/app/views/hrinfos/new.html.erb
+++ b/app/views/hrinfos/new.html.erb
@@ -47,7 +47,7 @@
 		<%= f.label :joined_on, Hrinfo.human_attribute_name('joined_on')%>
     <%= f.date_select :joined_on %>
 	</p>
-<% fields_for :attachment, @attachment do |attachment| -%>
+<%= fields_for :attachment, @attachment do |attachment| -%>
   <p>
   	<%= attachment.label t('hrinfos.edit.picture') %>
 		<%= attachment.file_field :uploaded_file %>
