--- a/app/views/shared/_new_attachment.html.erb
+++ b/app/views/shared/_new_attachment.html.erb
@@ -1,4 +1,4 @@
-<%= fields_for :attachment do |attachment| -%>
+<% fields_for :attachment do |attachment| -%>
 	<p>
 		<%= attachment.label :uploaded_file, t('common.title.attachment') %>
 		<%= attachment.file_field :uploaded_file %>
