--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -106,7 +106,7 @@ form div {
 }
 
 body {
-	background-image: url(/images/logo_bottom.png);
+	background-image: url(/assets/logo_bottom.png);
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: bottom right;
