temporately disable show_attachment

--- a/app/views/attachments/show.html.erb
+++ b/app/views/attachments/show.html.erb
@@ -37,7 +37,7 @@
 	</tr>
 </table>
 </div>
-<%= render :partial => "shared/show_attachment", :object => @attachment  %>
+<%#= render :partial => "shared/show_attachment", :object => @attachment  %>
 <div style="clear:both;"></div>
 </div>
 
