revert show_attachment

--- a/app/views/creditcards/show.html.erb
+++ b/app/views/creditcards/show.html.erb
@@ -33,7 +33,7 @@
 		</tr>
 	</table>
 	</div>
-	<%#= render :partial => "shared/show_attachment", :object => @creditcard  %>
+	<%= render :partial => "shared/show_attachment", :object => @creditcard  %>
 	<div style="clear:both;"></div>
 </div>
 
