should search in hrinfo

--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,7 +1,7 @@
 <% 	@title = t('.title') %>
 <% content_for :search do -%>
 	<%= form_tag({:action => "index"}, :method => :get ) do %>
-	<%= t("common.title.search") %> : <%= text_field_tag 'q' %>
+	<%= t("common.title.search") %> : <%= text_field_tag 'q', params[:q] %>
 	<% end -%>
 <% end -%>
 <div id="show_command">
