should search in cardbill(#7814)

--- a/app/views/cardbills/index.html.erb
+++ b/app/views/cardbills/index.html.erb
@@ -1,4 +1,11 @@
 <% @title  = t('.title') %>
+
+<% content_for :search do -%>
+	<%= form_tag :cardbills, :method => :get do %>
+		<%= t("common.title.search") %> : <%= text_field_tag 'q', params[:q] %>
+	<% end -%>
+<% end -%>
+
 <div id="show_command">
 <%= link_to t('common.title.new'), new_cardbill_path %>
 </div>
