--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -16,11 +16,11 @@
 </p>
 <p>
 	<%= f.label :started_on, Project.human_attribute_name("started_on") %>
-	<%= f.date_select :started_on %>
+	<%= f.date_select :started_on, :order => [:year, :month, :day] %>
 </p>
 <p>
 	<%= f.label :ending_on, Project.human_attribute_name("ending_on") %>
-	<%= f.date_select :ending_on %>
+	<%= f.date_select :ending_on, :order => [:year, :month, :day] %>
 </p>
 <p>
 	<%= f.label :revenue, Project.human_attribute_name("revenue") %>
