modify css bug(#7847)

--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -5,9 +5,8 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Mint Office</title>
-  <%= stylesheet_link_tag 'less' %>
-  <%= stylesheet_link_tag 'main' %>
-  <%= stylesheet_link_tag 'scaffold' %>
+  <%= stylesheet_link_tag "application" %>
+  <%= javascript_include_tag "application" %>
 	<meta name="viewport" content="width=device-width; initial-scale=1"/>
 	<!-- Add "maximum-scale=1" to fix the weird iOS auto-zoom bug on orientation changes. -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
