--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -398,16 +398,11 @@ ul#css3menu li.topitem>a{
 	background-color:traspar;border-width:1px 0 0 0;border-style:solid;border-color:;border-radius:1.6em;-moz-border-radius:1.6em;-webkit-border-radius:1.6em;font:bold 13px Arial,sans-serif;color:#E7E5E5;text-decoration:none;text-shadow:0 1px 1px #000000;}
 ul#css3menu li.topitem:hover>a{
 	background-color:#7dfa00; background-image:-moz-linear-gradient(50% 0%,rgba(255,255,255,0.77),rgba(85,170,0,0.7));background-image:-webkit-gradient(linear,50% 0%,50% 100%,from(rgba(255,255,255,0.77)),to(rgba(85,170,0,0.7)));border-style:solid;border-color:#F8F8F8;font:'bold 13px Arial,sans-serif';color:#444444;text-decoration:none;text-shadow:0 1px 0 #C5EAA1;filter:progid:DXImageTransform.Microsoft.gradient(gradientType=0,startColorstr=#C6FFFFFF,endColorstr=#B355AA00)}
-ul#css3menu .submenu>li{
-	margin:0;}
+/*ul#css3menu .submenu>li{
+	margin:0;}*/
 ul#css3menu .submenu{
 	background-color:#202020; background-image:-moz-linear-gradient(50% 0%,rgba(255,255,255,0.16),rgba(255,255,255,0));background-image:-webkit-gradient(linear,50% 0%,50% 100%,from(rgba(255,255,255,0.16)),to(rgba(255,255,255,0)));border-radius:10px;-moz-border-radius:10px;-webkit-border-radius:10px;border-color:#000000;padding:0;}
 ul#css3menu li.subfirst>a{
 	border-radius:9px 9px 0 0;-moz-border-radius:9px 9px 0 0;-webkit-border-radius:9px 9px 0 0;}
 ul#css3menu li.sublast>a{
 	border-radius:0 0 9px 9px;-moz-border-radius:0 0 9px 9px;-webkit-border-radius:0 0 9px 9px;}
-
-.logo {
-	margin-left: 10px;
-	margin-top: 50px;
-}
