--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,4 +1,7 @@
-<center><%= image_tag 'mint_logo.png', class: 'logo' %></center>
+<div id="logo">
+	<%= image_tag 'mint_logo.png' %>
+</div>
+
 <div id="mainmenu">
 <ul id="css3menu">
 	<li class="topitem"><a href="#"><span><%= t(".human_resources") %></span></a>
@@ -31,7 +34,7 @@
 	</li>
 	<li class="topitem"><a href="#"><span><%= t(".project") %></span></a>
 		<ul class="submenu">
-			<li class="subfirst">#</li>
+			<li class="subfirst">#qweqweqw</li>
 			<% if @user.permission.any? {|perm| perm.name == 'projects'}  %>
 				<li>
 					<%= link_to t("projects.index.title"), :controller => "projects" %>
@@ -43,11 +46,11 @@
 	<li class="topitem"><a href="#"><span><%= t(".document") %></span></a>
 		<ul class="submenu">
 			<li class="subfirst">#</li>
-			<%= link_to t("documents.index.title"), :controller => "documents" %>
-			<%= link_to t("namecards.index.title"), :controller => "namecards" %>
-				<li class="sublast">#</li>
-			</ul>
-		</li>
+			<li><%= link_to t("documents.index.title"), :controller => "documents" %></li>
+			<li><%= link_to t("namecards.index.title"), :controller => "namecards" %></li>
+			<li class="sublast">#</li>
+		</ul>
+	</li>
 	<!-- <li>
 		<%= link_to "Change Password", :action => "changepw" %>		
 	</li>
