--- a/app/views/pettycashes/index.html.erb
+++ b/app/views/pettycashes/index.html.erb
@@ -1,4 +1,11 @@
 <% @title = t('.title') %>
+
+<% content_for :search do -%>
+	<%= form_tag :pettycashes, :method => :get do %>
+		<%= t("common.title.search") %> : <%= text_field_tag 'q', params[:q] %>
+	<% end -%>
+<% end -%>
+
 <div id="show_command">
 	<%= link_to t('pettycashes.new.title'), new_pettycash_path %>
 </div>
