--- a/app/views/hrinfos/edit.html.erb
+++ b/app/views/hrinfos/edit.html.erb
@@ -4,7 +4,7 @@
 <%= link_to t('common.title.back'), hrinfos_path %>
 </div>
 <h2><%= t('common.title.edit') %></h2>
-<%= form_for(@hrinfo, 
+<%= form_for(@hrinfo,
 		:html => {:class => "tabular", :multipart => true}) do |f| %>
 <div class="box">
   <%= f.error_messages %>
@@ -49,37 +49,7 @@
 	</p>
 <% if @user.ingroup?("admin") %>
 	<p>
-		<%= fields_for :attachment, @attachment do |attachform| -%>
-		<%= attachform.label t('hrinfos.edit.picture') %>
-			<% if !@attachments.blank? %>
-				<% 
-					next_id = 0
-					prev_id = 0
-				 %>
-			  <% 0.upto(@attachments.count-1) do |i| %>
-				<% 
-					attachment = @attachments[i]
-					if i != @attachments.count-1
-						next_id = @attachments[i+1].id
-					else
-						next_id = 0
-					end
-			 	%>
-			  <%= attachment.id %>
-			  <img src="<%= url_for(:controller => "attachments", :action => 'picture', :id => attachment.id, :w => "100", :h => "80") %>" />
-			 		[<%= link_to "up", :controller => "attachments", :action => "changeseq", :id => attachment, :to => prev_id %>]
-				<%= attachment.seq %>
-			 		[<%= link_to "down", :controller => "attachments", :action => "changeseq", :id => attachment, :to => next_id  %>]
-					[<%= link_to t('common.title.destroy'), :controller => "attachments", :action => "delete", :id => attachment%>]
-					<br />
-					<% 
-					prev_id = attachment.id
-					 %>
-			  <% end %>
-			<% end %>
-
-			<%= attachform.file_field :uploaded_file %>
-		<% end -%>
+		<%= render 'shared/attachments/form', label: t('hrinfos.edit.picture') %>
 	</p>
 <% end %>
 </div>
