fix html.erb bug

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -52,10 +52,10 @@
 		</ul>
 	</li>
 	<!-- <li>
-		<%= link_to "Change Password", :action => "changepw" %>		
+		<%#= link_to "Change Password", :action => "changepw" %>		
 	</li>
 	<li>
-		<%= link_to "Attachment", :controller => "attachments" %>
+		<%#= link_to "Attachment", :controller => "attachments" %>
 	</li> -->
 </ul>
 </div>
