--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -51,6 +51,14 @@
 			<li class="sublast">#</li>
 		</ul>
 	</li>
+	<li class="topitem"><a href="#"><span><%= t(".business_client") %></span></a>
+		<ul class="submenu">
+			<li class="subfirst">#</li>
+			<li><%= link_to t("business_clients.index.title"), :business_clients %></li>
+			<li class="sublast">#</li>
+		</ul>
+	</li>
+
 	<!-- <li>
 		<%#= link_to "Change Password", :action => "changepw" %>		
 	</li>
