--- a/app/views/business_clients/show.html.erb
+++ b/app/views/business_clients/show.html.erb
@@ -37,7 +37,7 @@
 							<% end %>
 						</td>
 					<% else %>
-						<td><p><%= t('taxman.empty') %></p></td>
+						<td><p><%= t('taxmen.empty') %></p></td>
 					<% end %>
 					<td><%= link_to "담당자 추가하기", [:new, @business_client, :taxman] %></td>
 				</tr>
