--- a/app/views/business_clients/index.html.erb
+++ b/app/views/business_clients/index.html.erb
@@ -1,6 +1,10 @@
-<%= form_tag :business_clients, :method => :get do %>
-	<%= t("common.title.search") %> : <%= text_field_tag 'query', params[:query] %>
-<% end -%>
+<% @title  = t('.title') %>
+
+<% content_for :search do -%>
+	<%= form_tag :business_clients, :method => :get do %>
+		<%= t("common.title.search") %> : <%= text_field_tag 'query', params[:query] %>
+	<% end -%>
+<% end %>
 
 <% unless @business_clients.empty? %>
     <div id="show_command">
