--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -55,6 +55,7 @@
 		<ul class="submenu">
 			<li class="subfirst">#</li>
 			<li><%= link_to t("business_clients.index.title"), :business_clients %></li>
+			<li><%= link_to t("taxbill.index.title"), :taxbills %></li>
 			<li class="sublast">#</li>
 		</ul>
 	</li>
