--- a/app/views/taxbills/index.html.erb
+++ b/app/views/taxbills/index.html.erb
@@ -31,5 +31,5 @@
 		<%= will_paginate @taxbills %>
     </center>
 <% else %>
-    <h3><%= t 'taxbill.index.empty' %></h3>
+    <h3><%= t 'taxbills.index.empty' %></h3>
 <% end %>
