--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -405,3 +405,7 @@ ul#css3menu li.subfirst>a{
 	border-radius:9px 9px 0 0;-moz-border-radius:9px 9px 0 0;-webkit-border-radius:9px 9px 0 0;}
 ul#css3menu li.sublast>a{
 	border-radius:0 0 9px 9px;-moz-border-radius:0 0 9px 9px;-webkit-border-radius:0 0 9px 9px;}
+
+#taxbill-item-list {
+	float: right;
+}
