--- a/app/views/taxbills/show.html.erb
+++ b/app/views/taxbills/show.html.erb
@@ -1,70 +1,76 @@
 <% @title = t('.title') %>
 <div id="show_command">
-	<%= link_to t('common.title.edit'), [:edit, @taxbill] %> |
-	<%= link_to t('common.title.destroy'), @taxbill, :confirm => "Are you sure?", :method => :delete %> |
-	<%= link_to t('common.title.list'), :taxbills %>
+  <%= link_to t('common.title.edit'), [:edit, @taxbill] %> |
+  <%= link_to t('common.title.destroy'), @taxbill, :confirm => "Are you sure?", :method => :delete %> |
+  <%= link_to t('common.title.list'), :taxbills %>
 </div>
 <h2><%=h "거래처명" %></h2>
-	<div class="box">
-		<div id="descr">
-			<table border="0" cellspacing="5" cellpadding="5">
-				<tr>
-					<th align="right"><%= Taxbill.human_attribute_name('billtype') %>:</th>
-					<td align="right"><%= @taxbill.billtype %></td>
-				</tr>
-				<tr>
-					<th align="right"><%= Taxbill.human_attribute_name('transacted_at') %>:</th>
-					<td align="right"><%= @taxbill.transacted_at %></td>
-				</tr>
-				<tr>
-					<th align="right">총합 금액:</th>
-					<td align="right"><%= @taxbill.price %></td>
-				</tr>
-				<tr>
-					<th align="right">총합 세액:</th>
-					<td align="right"><%= @taxbill.tax %></td>
-				</tr>
-				<tr>
-					<th align="right">총합 합계액:</th>
-					<td align="right"><%= @taxbill.total %></td>
-				</tr>
+  <div class="box">
+    <div id="descr">
+      <table border="0" cellspacing="5" cellpadding="5">
+        <tr>
+          <th align="right"><%= Taxbill.human_attribute_name('billtype') %>:</th>
+          <td align="right"><%= @taxbill.billtype %></td>
+        </tr>
+        <tr>
+          <th align="right"><%= Taxbill.human_attribute_name('transacted_at') %>:</th>
+          <td align="right"><%= @taxbill.transacted_at %></td>
+        </tr>
+        <tr>
+          <th align="right">총합 금액:</th>
+          <td align="right"><%= @taxbill.price %></td>
+        </tr>
+        <tr>
+          <th align="right">총합 세액:</th>
+          <td align="right"><%= @taxbill.tax %></td>
+        </tr>
+        <tr>
+          <th align="right">총합 합계액:</th>
+          <td align="right"><%= @taxbill.total %></td>
+        </tr>
 
-				<tr>
-					<th align="right">담당자:</th>
-					<td align="right"><%= @taxbill.taxman.fullname %></td>
-				</tr>
+        <tr>
+          <th align="right">담당자:</th>
+          <td align="right"><%= @taxbill.taxman.fullname %></td>
+        </tr>
 
-			</table>
-		</div>
-		<div id="taxbill-item-list">
-			<%= link_to "새로운 내역 추가", [:new, @taxbill, :item] %>
-			<table border="0" cellspacing="5" cellpadding="5">
-				<% unless @taxbill.items.empty? %>
-					<tr>
-						<th>날짜</th>
-						<th>내역</th>
-						<th>단가</th>
-						<th>수량</th>
-						<th>금액</th>
-						<th>세액</th>
-						<th>합계액</th>
-					</tr>
-					<% @taxbill.items.each do |taxbill| %>
-						<tr>
-							<td><%= taxbill.transacted_at %></td>
-							<td><%= taxbill.note %></td>
-							<td><%= taxbill.unitprice %></td>
-							<td><%= taxbill.quantity %></td>
-							<td><%= taxbill.price %></td>
-							<td><%= taxbill.tax %></td>
-							<td><%= taxbill.sumvalue %></td>
-						</td>
-					<% end %>
-				<% else %>
-					항목이 없습니다.
-				<% end %>
-			</table>
-		</div>
-		<div style="clear: both;"></div>
-	</div>
+      </table>
+    </div>
+    <div id="taxbill-item-list">
+      <%= link_to "새로운 내역 추가", [:new, @taxbill, :item] %>
+      <table border="0" cellspacing="5" cellpadding="5">
+        <% unless @taxbill.items.empty? %>
+          <tr>
+            <th>날짜</th>
+            <th>내역</th>
+            <th>단가</th>
+            <th>수량</th>
+            <th>금액</th>
+            <th>세액</th>
+            <th>합계액</th>
+            <th>메뉴</th>
+          </tr>
+          <% @taxbill.items.each do |item| %>
+            <tr>
+              <td><%= item.transacted_at %></td>
+              <td><%= item.note %></td>
+              <td><%= item.unitprice %></td>
+              <td><%= item.quantity %></td>
+              <td><%= item.price %></td>
+              <td><%= item.tax %></td>
+              <td><%= item.sumvalue %></td>
+              <td>
+                <%= link_to "수정", [:edit, @taxbill, item] %>
+                |
+                <%= link_to "삭제", [@taxbill, item], :method => :delete, :confirm => "Are you sure?" %>
+              </td>
+            </td>
+          <% end %>
+        <% else %>
+          항목이 없습니다.
+        <% end %>
+      </table>
+    </div>
+    <div style="clear: both;"></div>
+  </div>
 </div>
