--- a/app/views/taxbills/index.html.erb
+++ b/app/views/taxbills/index.html.erb
@@ -1,24 +1,24 @@
 <% @title  = t('.title') %>
 
 <% content_for :search do -%>
-	<%= form_tag :taxbills, :method => :get do %>
-		<%= t("common.title.search") %> : <%= text_field_tag 'query', params[:query] %>
-	<% end -%>
+  <%= form_tag :taxbills, :method => :get do %>
+    <%= t("common.title.search") %> : <%= text_field_tag 'query', params[:query] %>
+  <% end -%>
 <% end %>
 
 <div id="show_command">
     <%= link_to t('common.title.new'), [:new, :taxbill] %>
 </div>
 
-<% unless @taxbills.empty? %>
-    <h2>Total : <%= @taxbills.count %></h2>
+<% unless taxbills.empty? %>
+    <h2>Total : <%= taxbills.count %></h2>
     <table id="list-table">
       <tr>
         <th><%= BusinessClient.human_attribute_name('name') %></th>
         <th><%= Taxbill.human_attribute_name('transacted_at') %></th>
         <th><%= Taxman.human_attribute_name('name') %></th>
       </tr>
-    <% @taxbills.each do |taxbill| %>
+    <% taxbills.each do |taxbill| %>
       <tr class="selectable" onclick="location.href='<%= taxbill_path(taxbill) %>'">
         <td><span><%=h "거래처명" %></span></td>
         <td><%=h taxbill.transacted_at %></td>
@@ -28,7 +28,7 @@
     </table>
     <br />
     <center>
-		<%= will_paginate @taxbills %>
+    <%= will_paginate taxbills %>
     </center>
 <% else %>
     <h3><%= t 'taxbills.index.empty' %></h3>
