modify taxbill bug

--- a/app/views/taxbills/show.html.erb
+++ b/app/views/taxbills/show.html.erb
@@ -68,7 +68,9 @@
             </td>
           <% end %>
         <% else %>
-          항목이 없습니다.
+          <tr>
+            <td>항목이 없습니다.</td>
+          </tr>
         <% end %>
       </table>
     </div>
